# datavault4dbt-duckdb-demo

./: .gitignore  README.md  generate_tpch_duckdb.py  pyproject.toml
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/models/stages/: sources.yml  stg_customer.sql  stg_lineitem.sql  stg_nation.sql  stg_order.sql  stg_part.sql  stg_partsupp.sql  stg_region.sql  stg_supplier.sql
