[project]
name = "datavault4dbt-duckdb-demo"
version = "0.1.0"
description = "A demo project for datavault4dbt on duckdb"
authors = [
    {name = "David Raoul Maas",email = "davidmaas_web@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9, <=3.12"
dependencies = [
    "duckdb (>=1.3.1,<2.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "dbt-core (>=1.10.3,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "duckdb-engine (>=0.17.0,<0.18.0)",
    "sqlfluff (>=3.5.0,<4.0.0)",
    "sqlfluff-templater-dbt (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
